backups/session_20260119_193037/build_log.txt
[  0%] Built target cpp_broadcast_bsefo_autogen_timestamp_deps
[  0%] Built target cpp_broadcast_bsefo_autogen
[  3%] Built target cpp_broadcast_bsefo
[  3%] Built target lzo_static_lib_autogen_timestamp_deps
[  4%] Built target lzo_static_lib_autogen
[ 31%] Built target lzo_static_lib
[ 31%] Built target TradingTerminal_autogen_timestamp_deps
[ 31%] Built target TradingTerminal_autogen
[ 31%] Building CXX object CMakeFiles/TradingTerminal.dir/src/repository/BSEFORepository.cpp.obj
C:\Users\admin\Desktop\trading_terminal_cpp\src\repository\BSEFORepository.cpp: In member function 'void BSEFORepository::prepareForLoad()':
C:\Users\admin\Desktop\trading_terminal_cpp\src\repository\BSEFORepository.cpp:481:3: error: 'm_scripCode' was not declared in this scope
   m_scripCode.clear();
   ^~~~~~~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\src\repository\BSEFORepository.cpp:481:3: note: suggested alternative: 'm_description'
   m_scripCode.clear();
   ^~~~~~~~~~~
   m_description
C:\Users\admin\Desktop\trading_terminal_cpp\src\repository\BSEFORepository.cpp: In member function 'void BSEFORepository::addContract(const MasterContract&, std::function<QString(const QString&)>)':
C:\Users\admin\Desktop\trading_terminal_cpp\src\repository\BSEFORepository.cpp:536:3: error: 'm_scripCode' was not declared in this scope
   m_scripCode.append(QString::number(contract.exchangeInstrumentID));
   ^~~~~~~~~~~
C:\Users\admin\Desktop\trading_terminal_cpp\src\repository\BSEFORepository.cpp:536:3: note: suggested alternative: 'm_description'
   m_scripCode.append(QString::number(contract.exchangeInstrumentID));
   ^~~~~~~~~~~
   m_description
mingw32-make.exe[2]: *** [CMakeFiles\TradingTerminal.dir\build.make:1167: CMakeFiles/TradingTerminal.dir/src/repository/BSEFORepository.cpp.obj] Error 1
mingw32-make.exe[1]: *** [CMakeFiles\Makefile2:208: CMakeFiles/TradingTerminal.dir/all] Error 2
mingw32-make.exe: *** [Makefile:135: all] Error 2
